--- a/demo/index.html
+++ b/demo/index.html
@@ -12,50 +12,26 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>finance-historicaldate Demo</title>
+  <title>finance-historical Demo</title>
   <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="../finance-historicaldate.html">
+  <link rel="import" href="../finance-historical.html">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body unresolved>
-<style is="custom-style">
-table {
-  width: 100%;
-  max-width: 100%;
-  margin-bottom: 20px;
-}
-.table > thead > tr > th,
-.table > tbody > tr > th,
-.table > tfoot > tr > th,
-.table > thead > tr > td,
-.table > tbody > tr > td,
-.table > tfoot > tr > td {
-  padding: 8px;
-  line-height: 1.42857143;
-  vertical-align: top;
-  border-top: 1px solid #dddddd;
-}
-.table > thead > tr > th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #dddddd;
-}
-.table > thead:first-child > tr:first-child > td {
-  border-top: 0;
-}
-.table > tbody + tbody {
-  border-top: 2px solid #dddddd;
-}
-.table .table {
-  background-color: #ffffff;
-}
-.table-striped > tbody > tr:nth-of-type(odd) {
-  background-color: #d6d6d6;
+<style>
+.table {
+  margin:5px 15px;
+  width: 80%;
+  box-sizing: border-box;
 }
 </style>
 <template is="dom-bind" id="bind">
-  <finance-historicaldate symbol="yhoo" end="2010-03-10" start="2009-9-11" data="{{response}}"></finance-historicaldate>
-  <table class="table table-striped">
+  <finance-historical symbol="yhoo" end="2010-03-10" start="2009-9-11" data="{{response}}"></finance-historical>
+  <table class="table table-striped table-bordered">
     <thead>
       <tr>
+        <th>#</th>
+        <th>Symbol</th>
         <th>Date</th>
         <th>Open</th>
         <th>High</th>
@@ -66,16 +42,20 @@ table {
       </tr>
     </thead>
     <tbody>
-      <template is="dom-repeat" items="{{response}}">
-        <tr>
-          <td>{{item.Date}}</td>
-          <td>{{item.Open}}</td>
-          <td>{{item.High}}</td>
-          <td>{{item.Low}}</td>
-          <td>{{item.Close}}</td>
-          <td>{{item.Volume}}</td>
-          <td>{{item.Adj_Close}}</td>
-        </tr>
+      <template is="dom-repeat" items="{{response}}" as="companies">
+        <template is="dom-repeat" items="{{companies}}">
+          <tr>
+            <td>{{index}}</td>
+            <td>{{item.Symbol}}</td>
+            <td>{{item.Date}}</td>
+            <td>{{item.Open}}</td>
+            <td>{{item.High}}</td>
+            <td>{{item.Low}}</td>
+            <td>{{item.Close}}</td>
+            <td>{{item.Volume}}</td>
+            <td>{{item.Adj_Close}}</td>
+          </tr>
+        </template>
       </template>
     </tbody>
   </table>
@@ -83,8 +63,8 @@ table {
 <script>
 window.addEventListener('WebComponentsReady', function(e) {
   var bind = document.querySelector('#bind');
-  var fh = document.querySelector('finance-historicaldate');
-  fh.addEventListener('finance-historicaldate-ready', function(data){
+  var fh = document.querySelector('finance-historical');
+  fh.addEventListener('finance-historical-ready', function(data){
     console.log(bind.response)
   })
 });
