--- a/finance-historical.html
+++ b/finance-historical.html
@@ -119,10 +119,12 @@ Polymer({
     } else {
       var script = document.createElement('script');
       var encodedQuery = encodeURIComponent(query);
-      var callback_name = 'yahoo_callback_wrapper' + new Date().getTime()
+      var callback_name = 'yahoo_callback_wrapper' + new Date().getTime();
+      var that = this;
       window[callback_name] = function(json){
         document.body.removeChild(script);
         window[callback_name] = undefined;
+        that._busy = false;
         callback(json);
       }.bind(this)
       script.src = 'https://query.yahooapis.com/v1/public/yql?q=' + encodedQuery+'&format=json&env=store%3A%2F%2Fdatatables.org%2Falltableswithkeys&callback=' + callback_name
@@ -130,7 +132,8 @@ Polymer({
     }
   },
   requestData: function(){
-    if (this.symbol && this.start && this.end){
+    if (this.symbol && this.start && this.end && !this._busy){
+      this._busy = true;
       this.set('data',[]);
       this.fire('finance-historical-inicated');
       this._yqlQuery(this._query, this._financeApiResponse.bind(this));
